--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Zachary M. Henderson
-logo: /assets/img/profile_photo.png
+logo: /assets/img/profile_photo.jpg
 
 show_downloads: true
 theme: jekyll-theme-minimal
